[package]
name = "i2c2i2c"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
lto = true
opt-level = "s"

[dependencies]
attiny-hal = { git = "https://github.com/rahix/avr-hal", features = ["attiny85"] }
bit-struct = "0.3.2"
